--- a/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
+++ b/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
@@ -20,24 +20,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fem-kw-cFu">
-                    <rect key="frame" x="0.0" y="14" width="600" height="150"/>
+                    <rect key="frame" x="0.0" y="20" width="600" height="150"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJ1-1b-FuE">
-                            <rect key="frame" x="0.0" y="50" width="600" height="1"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="1" id="enY-7w-gG3"/>
-                            </constraints>
-                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cge-uG-r6I">
                             <rect key="frame" x="0.0" y="99" width="600" height="1"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="7GQ-SR-Hkp"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="旧密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXu-gX-heQ">
-                            <rect key="frame" x="10" y="5" width="100" height="40"/>
+                            <rect key="frame" x="15" y="5" width="100" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="100" id="3yh-gl-N8c"/>
                                 <constraint firstAttribute="height" constant="40" id="UlO-B8-edl"/>
@@ -47,7 +40,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LuX-ZO-v1U">
-                            <rect key="frame" x="10" y="56" width="100" height="40"/>
+                            <rect key="frame" x="15" y="56" width="100" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="100" id="qMQ-P8-cNf"/>
                                 <constraint firstAttribute="height" constant="40" id="quV-1z-n0y"/>
@@ -57,7 +50,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8A-Sr-J42">
-                            <rect key="frame" x="10" y="106" width="100" height="40"/>
+                            <rect key="frame" x="15" y="106" width="100" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="100" id="Ay5-fw-PeD"/>
                                 <constraint firstAttribute="height" constant="40" id="vDP-W8-xeo"/>
@@ -93,11 +86,18 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pJ1-1b-FuE">
+                            <rect key="frame" x="0.0" y="53" width="600" height="1"/>
+                            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="enY-7w-gG3"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="pJ1-1b-FuE" secondAttribute="trailing" id="2Ac-cQ-j0g"/>
-                        <constraint firstItem="bXu-gX-heQ" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="10" id="4QY-qP-Gu8"/>
+                        <constraint firstItem="bXu-gX-heQ" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="15" id="4QY-qP-Gu8"/>
                         <constraint firstAttribute="trailing" secondItem="XbH-bq-uDu" secondAttribute="trailing" constant="20" id="4dI-vt-Cg1"/>
                         <constraint firstAttribute="trailing" secondItem="pNd-q7-Ayd" secondAttribute="trailing" constant="20" id="8Dp-gd-mdl"/>
                         <constraint firstItem="htv-PJ-Xdg" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="top" constant="5" id="BeC-DI-LFM"/>
@@ -105,11 +105,11 @@
                         <constraint firstItem="r8A-Sr-J42" firstAttribute="top" secondItem="LuX-ZO-v1U" secondAttribute="bottom" constant="10" id="G0m-wj-pNo"/>
                         <constraint firstAttribute="bottom" secondItem="XbH-bq-uDu" secondAttribute="bottom" constant="5" id="Hk5-uS-wud"/>
                         <constraint firstItem="pJ1-1b-FuE" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="top" constant="50" id="NFI-Ur-3y0"/>
-                        <constraint firstItem="LuX-ZO-v1U" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="10" id="Pwr-BI-Gw2"/>
+                        <constraint firstItem="LuX-ZO-v1U" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="15" id="Pwr-BI-Gw2"/>
                         <constraint firstItem="cge-uG-r6I" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" id="RLR-6w-g1K"/>
                         <constraint firstAttribute="trailing" secondItem="cge-uG-r6I" secondAttribute="trailing" id="SLs-qC-8dJ"/>
                         <constraint firstItem="bXu-gX-heQ" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="top" constant="5" id="WuW-1t-gKK"/>
-                        <constraint firstItem="r8A-Sr-J42" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="10" id="Y7S-Df-pqe"/>
+                        <constraint firstItem="r8A-Sr-J42" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" constant="15" id="Y7S-Df-pqe"/>
                         <constraint firstItem="pNd-q7-Ayd" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="top" constant="55" id="iAC-Rl-5gS"/>
                         <constraint firstItem="pJ1-1b-FuE" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" id="jTh-6l-fAv"/>
                         <constraint firstAttribute="bottom" secondItem="cge-uG-r6I" secondAttribute="bottom" constant="50" id="nPi-P9-Jjo"/>
@@ -118,8 +118,8 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnr-dl-k6x">
-                    <rect key="frame" x="60" y="204" width="480" height="50"/>
-                    <color key="backgroundColor" red="1" green="0.2431656891" blue="0.39739182740000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="60" y="210" width="480" height="50"/>
+                    <color key="backgroundColor" red="0.90196078430000004" green="0.043137254899999998" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="h6e-az-mxa"/>
                     </constraints>
@@ -134,7 +134,7 @@
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="fem-kw-cFu" secondAttribute="trailing" id="0CY-6Y-Jq7"/>
-                <constraint firstItem="fem-kw-cFu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="14" id="4o8-2e-2KT"/>
+                <constraint firstItem="fem-kw-cFu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="4o8-2e-2KT"/>
                 <constraint firstAttribute="trailing" secondItem="fnr-dl-k6x" secondAttribute="trailing" constant="60" id="TNK-TR-9NS"/>
                 <constraint firstItem="fnr-dl-k6x" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="bottom" constant="40" id="cHz-6y-hw1"/>
                 <constraint firstItem="fem-kw-cFu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dQi-nx-2aE"/>
