--- a/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PersonTVCell.xib
+++ b/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PersonTVCell.xib
@@ -21,7 +21,7 @@
                             <constraint firstAttribute="width" constant="100" id="Hc0-WR-jlf"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.54117647058823526" green="0.54117647058823526" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1pe-vG-EN9">
@@ -50,11 +50,12 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="Y3c-nw-zyO"/>
                         </constraints>
+                        <color key="textColor" red="0.54117647059999996" green="0.54117647059999996" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="3Ia-xz-Cco" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="Cer-Qd-bAF"/>
                     <constraint firstItem="1pe-vG-EN9" firstAttribute="top" secondItem="t04-oh-7bk" secondAttribute="bottom" id="KLZ-WF-CKS"/>
