--- a/HealthySettle/HealthySettle/MyGroup/SetTVCell.xib
+++ b/HealthySettle/HealthySettle/MyGroup/SetTVCell.xib
@@ -27,15 +27,6 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EFJ-jK-r6a">
-                        <rect key="frame" x="68" y="18" width="100" height="38"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="OLB-8G-DL5"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="z_02.png" translatesAutoresizingMaskIntoConstraints="NO" id="zlE-Nm-4LR">
                         <rect key="frame" x="404" y="8" width="20" height="46"/>
                         <constraints>
@@ -43,7 +34,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fp-vt-fW4">
-                        <rect key="frame" x="289" y="18" width="100" height="26"/>
+                        <rect key="frame" x="289" y="13" width="100" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="qFe-78-bgl"/>
                         </constraints>
@@ -51,20 +42,30 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EFJ-jK-r6a">
+                        <rect key="frame" x="68" y="13" width="100" height="36"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="OLB-8G-DL5"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="6Fp-vt-fW4" secondAttribute="trailing" constant="90" id="1qB-0Y-Qes"/>
-                    <constraint firstItem="EFJ-jK-r6a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="2RR-Qp-a6J"/>
-                    <constraint firstItem="fVX-OZ-AC3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="2l5-LI-UIp"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="6Fp-vt-fW4" secondAttribute="bottom" constant="10" id="N2N-VW-NL2"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="fVX-OZ-AC3" secondAttribute="bottom" constant="10" id="Nfc-6E-WJX"/>
-                    <constraint firstItem="6Fp-vt-fW4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="Q2V-SX-Mmt"/>
+                    <constraint firstItem="EFJ-jK-r6a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="2RR-Qp-a6J"/>
+                    <constraint firstItem="fVX-OZ-AC3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="2l5-LI-UIp"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="6Fp-vt-fW4" secondAttribute="bottom" constant="5" id="N2N-VW-NL2"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="fVX-OZ-AC3" secondAttribute="bottom" constant="5" id="Nfc-6E-WJX"/>
+                    <constraint firstItem="6Fp-vt-fW4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="Q2V-SX-Mmt"/>
                     <constraint firstItem="zlE-Nm-4LR" firstAttribute="leading" secondItem="6Fp-vt-fW4" secondAttribute="trailing" constant="15" id="RpC-Pr-BBK"/>
                     <constraint firstItem="EFJ-jK-r6a" firstAttribute="leading" secondItem="fVX-OZ-AC3" secondAttribute="trailing" constant="20" id="TQs-DN-N5b"/>
                     <constraint firstItem="fVX-OZ-AC3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="ZUG-ga-1el"/>
                     <constraint firstAttribute="bottomMargin" secondItem="zlE-Nm-4LR" secondAttribute="bottom" id="g7V-bQ-vZ7"/>
                     <constraint firstAttribute="trailingMargin" secondItem="zlE-Nm-4LR" secondAttribute="trailing" constant="20" id="mj9-rV-Dkp"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="EFJ-jK-r6a" secondAttribute="bottom" constant="10" id="pbr-To-3QU"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="EFJ-jK-r6a" secondAttribute="bottom" constant="5" id="pbr-To-3QU"/>
                     <constraint firstItem="zlE-Nm-4LR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="tG9-mG-hcJ"/>
                 </constraints>
                 <variation key="default">
